--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2 style="color: yello">Jave Home App -Deployed by Ansible</h2>
+<h2 style="color: yellow">Jave Home App -Deployed by Ansible</h2>
 
 </body>
 </html>
